--- a/Java200/src/desktop/application/index.html
+++ b/Java200/src/desktop/application/index.html
@@ -40,14 +40,18 @@
 	</header>
 	<main class="container-fluid">
 		<section class="row">
-			<div class="col-md-6">
-				Col 1
+			<div class="col-sm-6 col-md-6">
+				<button class="btn btn-default" id="button-1">Button 1</button>
+				<div id="content-1"></div>
 			</div>
-			<div class="col-md-6">
-				Col 2
+			<div class="col-sm-6 col-md-6">
+				<button class="btn btn-primary" id="button-2">Button 2</button>
+				<div id="content-2"></div>
 			</div>
 		</section>
 	<main>
+	<script src="./jquery-3.3.1.min.js"></script>
 	<script src="./bootstrap.bundle.min.js"></script>
+	<script src="./main.js"></script>
 </body>
 </html>
